fix spacing chat container and upper search bar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2284,7 +2284,7 @@ h1 {
   border-radius: 20px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 25px;
+  margin-top: 50px;
   margin-bottom: 25px;
   height: 100vh;
   display: flex;
@@ -2369,7 +2369,7 @@ h1 {
 
 .chat__search-bar {
   position: relative;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
   padding: 15px;
 }
 
