--- a/resources/sass/components/_chat.scss
+++ b/resources/sass/components/_chat.scss
@@ -4,7 +4,7 @@
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25px;
+    margin-top: 50px;
     margin-bottom: 25px;
     height: 100vh;
 
@@ -83,7 +83,7 @@
 
 .chat__search-bar {
     position: relative;
-    margin-bottom: 35px; 
+    margin-bottom: 10px; 
     padding: 15px;
 }
 
